enrolment and clothing sections

--- a/_includes/layouts/documents.njk
+++ b/_includes/layouts/documents.njk
@@ -81,7 +81,7 @@
             </li>
             <li>
               <span class="documents__info--list-heading">Rozpočet</span>
-              <p>viz  <a href="#budget">Rozpočty</a> výše</p>
+              <p>viz sekce <a href="#budget">Rozpočty</a> výše</p>
             </li>
           </ol>
         </li>
