--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -13,13 +13,13 @@
       </ul>
     </li>
     <li class="nav__item">
-      <a class="nav__link" id="nav__link--parents" href="#">Pro rodiče</a> <!-- tenhle link povede na 1. položku z podnabídky -->
+      <a class="nav__link" id="nav__link--parents" href="/pro-rodice/zapis">Pro rodiče</a>
       <ul class="sub-nav dn" id="sub-nav--parents">
-        <li><a class="sub-nav__link" href="#">Zápis</a></li>
-        <li><a class="sub-nav__link" href="#">Oblečení do MŠ</a></li>
-        <li><a class="sub-nav__link" href="#">Rady rodičům</a></li>
-        <li><a class="sub-nav__link" href="#">Akce pro rodiče</a></li>
-        <li><a class="sub-nav__link" href="#">Platby</a></li>
+        <li><a class="sub-nav__link" href="/pro-rodice/zapis">Zápis</a></li>
+        <li><a class="sub-nav__link" href="/pro-rodice/obleceni">Oblečení do MŠ</a></li>
+        <li><a class="sub-nav__link" href="/pro-rodice/rady">Rady rodičům</a></li>
+        <li><a class="sub-nav__link" href="/pro-rodice/akce">Akce pro rodiče</a></li>
+        <li><a class="sub-nav__link" href="/pro-rodice/platby">Platby</a></li>
       </ul>
     </li>
     <li><a class="nav__link" href="#">Jídelníček</a></li>
