--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -22,6 +22,7 @@ nav {
     padding: 1em 2em;
 
     &:hover {
+      color: $color-light;
       background-color: $color-primary-dark;
     }
   }
@@ -40,11 +41,12 @@ nav {
     font-family: $font-headings;
     font-weight: 400;
     color: $color-light;
-    width: 100%;
     padding: 0.75em 2em;
+    width: 100%;
   
     &:hover {
-      background-color: $color-primary-dark;
+    color: $color-light;
+    background-color: $color-primary-dark;
     }
   }
 }
