--- a/css/styles.css
+++ b/css/styles.css
@@ -68,10 +68,6 @@
   margin: 0.5em;
 }
 
-.contact-details__email:hover, .contact-details__email:focus {
-  color: #ff8000;
-}
-
 .contact-details__address {
   display: inline-block;
   margin: 0.5em;
@@ -108,6 +104,7 @@ nav {
 }
 
 .nav__link:hover {
+  color: #e6e6e6;
   background-color: #ff8000;
 }
 
@@ -125,11 +122,12 @@ nav {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   color: #e6e6e6;
-  width: 100%;
   padding: 0.75em 2em;
+  width: 100%;
 }
 
 .sub-nav__link:hover {
+  color: #e6e6e6;
   background-color: #ff8000;
 }
 
@@ -145,9 +143,6 @@ nav {
   padding: 1em 2em;
   text-align: justify;
   line-height: 1.5;
-}
-
-.main--home {
   min-height: 70vh;
 }
 
@@ -215,12 +210,6 @@ nav {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3 / 4;
-  color: #ff9933;
-  font-weight: 600;
-}
-
-.news-meal__link:hover {
-  color: #ff8000;
 }
 
 .interests__image {
@@ -369,14 +358,6 @@ nav {
   grid-row: 2 / 3;
 }
 
-.documents a {
-  color: #ff9933;
-}
-
-.documents a:hover {
-  color: #ff8000;
-}
-
 .documents__info {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
@@ -419,6 +400,30 @@ nav {
   border-collapse: collapse;
   padding: 0.5em;
   height: 40px;
+}
+
+.enrolment__link {
+  display: block;
+}
+
+.enrolment__holidays {
+  padding-top: 1em;
+}
+
+.enrolment__holidays table,
+.enrolment__holidays th,
+.enrolment__holidays td {
+  border: 1px solid #333333;
+  border-collapse: collapse;
+  padding: 0 0.5em;
+}
+
+.enrolment__holidays--relevant {
+  background-color: #ffb366;
+}
+
+.enrolment__holidays--important {
+  font-weight: 600;
 }
 
 .footer {
@@ -467,5 +472,14 @@ h3 {
   font-size: 1.1em;
   color: #333333;
   margin-bottom: 0;
+}
+
+/* generic styles for links */
+a {
+  color: #ff9933;
+}
+
+a:hover {
+  color: #ff8000;
 }
 /*# sourceMappingURL=styles.css.map */
