advice and events sections

--- a/_includes/layouts/advice.njk
+++ b/_includes/layouts/advice.njk
@@ -4,7 +4,50 @@
 <main class="main main--for-parents">
 
   <section class="advice">
+    <h1>Rady rodičům</h1>
+    <ul>
+      <li>Vyprávějte si s dětmi o mateřské školce. Zeptejte se dětí, co dnes dělaly, jakého mají kamaráda, co se jim dnes nejvíce líbilo a co měly k obědu.</li>
+      <li>Ujistěte dítě, že si pro něj přijdete co nejdříve to bude možné.</li>
+      <li>Vysvětlete dítěti, že i zahrada je naše školka a pokud budou děti venku, přijdete si pro ně tam. (Za hezkého počasí využíváme zahradu i během dne.)</li>
+      <li>Splňte vždy svůj slib. Pokud něco řeknete, udělejte to. Nikdy dítěti neříkejte, že půjde po obědě domů, když to není pravda. Dítě na Vás čeká a pláče.</li>
+      <li>Zvykejte dítě na odloučení. Buďte během příchodu a odchodu do/ze školky milí, ale také rozhodní. Odcházejte do práce s úsměvem, nikdy na dítě nekřičte ani ve vzteku, i ono si musí na nové prostředí zvyknout. Neplačte před dítětem, když odcházíte, dítě je velmi citlivé a vnímavé.</li>
+      <li>Podpořte a ujistěte dítě, že ve školce vše zvládne. Chvalte své dítě. Učitelky také i za malý úspěch Vaše dítě chválí. Snažte se, aby bylo dítě vyzvednuto včas.</li>
+    </ul>
 
+    <h2>Sebeobsluha</h2>
+    <ul>
+      <li>
+        <span>Oblékání</span>
+        <ul>
+          <li>do školky je nejjednodušší tričko a tepláčky</li>
+          <li>nevhodné je těsné oblečení, zipy, pásky, řada knoflíků - zbytečně to dítě stresuje</li>
+          <li>na ven tepláčky a mikina</li>
+        </ul>
+      </li>
+      <li>
+        <span>Obouvání</span>
+        <ul>
+          <li>dovnitř pevné bačkorky, ne pantofle nebo botičky s přezkou</li>
+          <li>na ven nejlépe boty na suché zipy</li>
+        </ul>
+      </li>
+      <li>
+        <span>Jídlo</span>
+        <ul>
+          <li>naučte dítě jíst lžící, starší děti příborem</li>
+          <li>vaše dítě dokrmíme, jídlo je přizpůsobené věku dítěte</li>
+          <li>pití je k dispozici po celý den</li>
+          <li>ve svačinách je dostatek ovoce a zeleniny</li>
+        </ul>
+      </li>
+      <li>
+        <span>Hygiena</span>
+        <ul>
+          <li>ujistěte dítě, aby se nebálo říci učitelce, že potřebuje na WC, paní učitelky mu samozřejmě s hygienou pomohou</li>
+          <li>naučte dítě smrkat</li>
+        </ul>
+      </li>
+    </ul>
   </section>
 
 </main>
