--- a/_includes/layouts/events.njk
+++ b/_includes/layouts/events.njk
@@ -4,7 +4,15 @@
 <main class="main main--for-parents">
 
   <section class="events">
-
+    <h1>Akce pro rodiče</h1>
+    <ul>
+      <li>karneval</li>
+      <li>besídka ke dni matek</li>
+      <li>mikulášská besídka, vánoční posezení s ukázkou hudební a dramatické výchovy</li>
+      <li>ukázky výchovné práce s dětmi (volný vstup rodičů do MŠ každý den)</li>
+      <li>ukázka práce v kroužcích</li>
+      <li>divadla pro děti, které ještě MŠ nenavštěvují</li>
+    </ul>
   </section>
 
 </main>
