--- a/css/_main-page.scss
+++ b/css/_main-page.scss
@@ -2,7 +2,7 @@
   padding: 1em 2em;
   text-align: justify;
   line-height: 1.5;
-  min-height: 70vh;
+  min-height: 70vh; // x u větších obrazovek je to málo
 }
 
 .about-us__image {
