--- a/css/_for-parents.scss
+++ b/css/_for-parents.scss
@@ -23,3 +23,13 @@
     }
   }
 }
+
+.payment {
+  table,
+  th,
+  td {
+    border: 1px solid $color-dark;
+    border-collapse: collapse;
+    padding: 0 0.5em;
+  }
+}
