--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -33,6 +33,6 @@
         <li><a class="sub-nav__link" href="#">Rákosníček</a></li>
       </ul>
     </li>
-    <li><a class="nav__link" href="#">Kontakty</a></li>
+    <li><a class="nav__link" href="/kontakty">Kontakty</a></li>
   </ul>
 </nav>
