--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@
         "main-page",
         "about-school",
         "for-parents",
+        "contacts",
         "footer";
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto+Condensed:wght@400;700&display=swap');
@@ -47,4 +48,9 @@ a {
   &:hover {
     color: $color-primary-dark;
   }
+}
+
+/* generic styles for iframes */
+iframe {
+  border: none;
 }
