minor styling design changes

--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -1,6 +1,6 @@
 <nav>
   <ul class="nav">
-    <li><a class="nav__link" href="#">Aktuality</a></li>
+    <li><a class="nav__link" href="/aktuality">Aktuality</a></li>
     <li class="nav__item">
       <a class="nav__link" id="nav__link--kindergarten" href="/o-skolce/koncepce">O školce</a>
       <ul class="sub-nav dn" id="sub-nav--kindergarten">
@@ -22,15 +22,15 @@
         <li><a class="sub-nav__link" href="/pro-rodice/platby">Platby</a></li>
       </ul>
     </li>
-    <li><a class="nav__link" href="#">Jídelníček</a></li>
+    <li><a class="nav__link" href="/jidelnicek">Jídelníček</a></li>
     <li class="nav__item">
-      <a class="nav__link" id="nav__link--classes" href="#">Třídy</a> <!-- tenhle link povede na přehled tříd (viz Horolezecká) -->
+      <a class="nav__link" id="nav__link--classes" href="/tridy">Třídy</a>
       <ul class="sub-nav dn" id="sub-nav--classes">
-        <li><a class="sub-nav__link" href="#">Broučci</a></li>
-        <li><a class="sub-nav__link" href="#">Cvrček</a></li>
-        <li><a class="sub-nav__link" href="#">Krteček</a></li>
-        <li><a class="sub-nav__link" href="#">Maková panenka</a></li>
-        <li><a class="sub-nav__link" href="#">Rákosníček</a></li>
+        <li><a class="sub-nav__link" href="/tridy/broucci">Broučci</a></li>
+        <li><a class="sub-nav__link" href="/tridy/cvrcek">Cvrček</a></li>
+        <li><a class="sub-nav__link" href="/tridy/krtecek">Krteček</a></li>
+        <li><a class="sub-nav__link" href="/tridy/makova-panenka">Maková panenka</a></li>
+        <li><a class="sub-nav__link" href="/tridy/rakosnicek">Rákosníček</a></li>
       </ul>
     </li>
     <li><a class="nav__link" href="/kontakty">Kontakty</a></li>
