--- a/_includes/layouts/enrolment.njk
+++ b/_includes/layouts/enrolment.njk
@@ -4,7 +4,7 @@
 <main class="main main--for-parents">
 
   <section class="enrolment">
-    <h1>Zápis</h1>
+    <h1 class="enrolment__heading">Zápis</h1>
 
     {{ content | safe }}
 
