--- a/css/_about-school.scss
+++ b/css/_about-school.scss
@@ -113,9 +113,20 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, auto);
+  grid-gap: 1em;
 
   &__heading {
     grid-column: 1 / 3;
+  }
+
+  &__budget,
+  &__reports,
+  &__foundation,
+  &__gdpr,
+  &__info {
+    border-radius: 4px;
+    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+    padding: 0 1em;
   }
 
   &__reports {
@@ -129,7 +140,6 @@
 
   &__info {
     grid-column: 1 / 3;
-    margin-top: 1em;
     
     ol {
       list-style-type: none;
