--- a/css/_contacts.scss
+++ b/css/_contacts.scss
@@ -9,6 +9,7 @@
 
   &__class {
     width: 180px;
+    border-radius: 4px;
     box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
     padding: 0.5em;
   }
