--- a/css/_for-parents.scss
+++ b/css/_for-parents.scss
@@ -1,10 +1,25 @@
 .enrolment {
+  display: grid;
+  grid-template-columns: 60% 36%;
+  grid-gap: 1em 2em;
+
+  &__heading {
+    grid-column: 1 / 3;
+  }
+
+  &__aside {
+    margin-top: 3em;
+    text-align: left;
+    border-radius: 4px;
+    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+    padding: 0 1em;
+  }
+
   &__link {
     display: block;
   }
 
   &__holidays {
-    padding-top: 1em;
 
     table,
     th,
