--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,6 @@ nav {
   -ms-grid-rows: (1fr)[3];
       grid-template-rows: repeat(3, 1fr);
   grid-gap: 0.5em;
-  justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -335,12 +334,20 @@ nav {
       grid-template-columns: repeat(2, 1fr);
   -ms-grid-rows: (auto)[4];
       grid-template-rows: repeat(4, auto);
+  grid-gap: 1em;
 }
 
 .documents__heading {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1 / 3;
+}
+
+.documents__budget, .documents__reports, .documents__foundation, .documents__gdpr, .documents__info {
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  padding: 0 1em;
 }
 
 .documents__reports {
@@ -362,7 +369,6 @@ nav {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1 / 3;
-  margin-top: 1em;
 }
 
 .documents__info ol {
@@ -402,12 +408,31 @@ nav {
   height: 40px;
 }
 
-.enrolment__link {
-  display: block;
+.enrolment {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 60% 36%;
+      grid-template-columns: 60% 36%;
+  grid-gap: 1em 2em;
 }
 
-.enrolment__holidays {
-  padding-top: 1em;
+.enrolment__heading {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+}
+
+.enrolment__aside {
+  margin-top: 3em;
+  text-align: left;
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  padding: 0 1em;
+}
+
+.enrolment__link {
+  display: block;
 }
 
 .enrolment__holidays table,
@@ -450,6 +475,7 @@ nav {
 
 .contact__class {
   width: 180px;
+  border-radius: 4px;
   -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
   padding: 0.5em;
