--- a/css/_for-parents.scss
+++ b/css/_for-parents.scss
@@ -1,18 +1,34 @@
 .enrolment {
-  display: grid;
-  grid-template-columns: 60% 36%;
-  grid-gap: 1em 2em;
+  
+  &__year,
+  &__holidays {
+    border-radius: 4px;
+    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+    padding: 1em;
+    margin-bottom: 1em;
+    display: flex;
+  }
 
-  &__heading {
-    grid-column: 1 / 3;
+  &__main {
+    flex-basis: 60%;
+  }
+
+  &__date {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+    width: 320px;
+    margin: 1em 0;
   }
 
   &__aside {
-    margin-top: 3em;
+    flex-basis: 36%;
+    margin: 3em 0 0 3em;
+    padding-left: 2em;
+    border-left: 1px solid grey;
     text-align: left;
-    border-radius: 4px;
-    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
-    padding: 0 1em;
   }
 
   &__link {
@@ -36,6 +52,29 @@
     &--important {
       font-weight: 600;
     }
+  }
+}
+
+.date {
+  background-color: #3399FF;
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  width: 128px;
+  padding: 1em;
+  border-radius: 4px 0 0 4px;
+
+  &__day {
+    font-size: 3em;
+    margin: 0;
+  }
+
+  &__month {
+    margin: 0;
+  }
+
+  &__text {
+    padding: 1em;
   }
 }
 
