--- a/css/styles.css
+++ b/css/styles.css
@@ -408,27 +408,44 @@ nav {
   height: 40px;
 }
 
-.enrolment {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 60% 36%;
-      grid-template-columns: 60% 36%;
-  grid-gap: 1em 2em;
-}
-
-.enrolment__heading {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
-}
-
-.enrolment__aside {
-  margin-top: 3em;
-  text-align: left;
+.enrolment__year, .enrolment__holidays {
   border-radius: 4px;
   -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
-  padding: 0 1em;
+  padding: 1em;
+  margin-bottom: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.enrolment__main {
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+}
+
+.enrolment__date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  width: 320px;
+  margin: 1em 0;
+}
+
+.enrolment__aside {
+  -ms-flex-preferred-size: 36%;
+      flex-basis: 36%;
+  margin: 3em 0 0 3em;
+  padding-left: 2em;
+  border-left: 1px solid grey;
+  text-align: left;
 }
 
 .enrolment__link {
@@ -449,6 +466,29 @@ nav {
 
 .enrolment__holidays--important {
   font-weight: 600;
+}
+
+.date {
+  background-color: #3399FF;
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  width: 128px;
+  padding: 1em;
+  border-radius: 4px 0 0 4px;
+}
+
+.date__day {
+  font-size: 3em;
+  margin: 0;
+}
+
+.date__month {
+  margin: 0;
+}
+
+.date__text {
+  padding: 1em;
 }
 
 .payment table,
