design update of for-parents section

--- a/_includes/layouts/advice.njk
+++ b/_includes/layouts/advice.njk
@@ -15,39 +15,51 @@
     </ul>
 
     <h2>Sebeobsluha</h2>
-    <ul>
-      <li>
-        <span>Oblékání</span>
+    <div class="advice-container">
+      <div class="advice__type">
+        <div class="advice__heading">
+          <h3>Oblékání</h3>
+          <img class="advice__icon" src="/images/clothing.svg" alt="">
+        </div>
         <ul>
           <li>do školky je nejjednodušší tričko a tepláčky</li>
-          <li>nevhodné je těsné oblečení, zipy, pásky, řada knoflíků - zbytečně to dítě stresuje</li>
           <li>na ven tepláčky a mikina</li>
+          <li>nevhodné je těsné oblečení, zipy, pásky, řada knoflíků - zbytečně to dítě stresuje</li>
         </ul>
-      </li>
-      <li>
-        <span>Obouvání</span>
+      </div>
+      <div class="advice__type">
+        <div class="advice__heading">
+          <h3>Obouvání</h3>
+          <img class="advice__icon" src="/images/shoe.svg" alt="">
+        </div>
         <ul>
-          <li>dovnitř pevné bačkorky, ne pantofle nebo botičky s přezkou</li>
+          <li>dovnitř pevné bačkorky, ne pantofle nebo boty s přezkou</li>
           <li>na ven nejlépe boty na suché zipy</li>
         </ul>
-      </li>
-      <li>
-        <span>Jídlo</span>
+      </div>
+      <div class="advice__type">
+        <div class="advice__heading">
+          <h3>Jídlo</h3>
+          <img class="advice__icon" src="/images/food.svg" alt="">
+        </div>
         <ul>
           <li>naučte dítě jíst lžící, starší děti příborem</li>
           <li>vaše dítě dokrmíme, jídlo je přizpůsobené věku dítěte</li>
           <li>pití je k dispozici po celý den</li>
           <li>ve svačinách je dostatek ovoce a zeleniny</li>
         </ul>
-      </li>
-      <li>
-        <span>Hygiena</span>
+      </div>
+      <div class="advice__type">
+        <div class="advice__heading">
+          <h3>Hygiena</h3>
+          <img class="advice__icon" src="/images/hygiene.svg" alt="">
+        </div>
         <ul>
           <li>ujistěte dítě, aby se nebálo říci učitelce, že potřebuje na WC, paní učitelky mu samozřejmě s hygienou pomohou</li>
           <li>naučte dítě smrkat</li>
         </ul>
-      </li>
-    </ul>
+      </div>
+    </div>
   </section>
 
 </main>
