--- a/_includes/layouts/clothing.njk
+++ b/_includes/layouts/clothing.njk
@@ -5,25 +5,34 @@
 
   <section class="clothing">
     <h1>Oblečení do mateřské školky</h1>
-    <ul>
-      <li>
-        <span>Dovnitř</span>
+    <div class="clothing-container">
+      <div class="clothing__type">
+        <div class="clothing__heading">
+          <h3>Dovnitř</h3>
+          <img class="clothing__icon" src="/images/inside.svg" alt="">
+        </div>
         <ul>
           <li>tričko</li>
-          <li>tepláky nebo kalhoty s kapsou pro chlapce, legíny pro dívky</li>
+          <li>tepláky pro chlapce, legíny pro dívky</li>
           <li>bačkory nazouvací (ne pantofle)</li>
         </ul>
-      </li>
-      <li>
-        <span>Na ven</span>
+      </div>
+      <div class="clothing__type">
+        <div class="clothing__heading">
+          <h3>Na ven</h3>
+          <img class="clothing__icon" src="/images/outside.svg" alt="">
+        </div>
         <ul>
           <li>tepláková souprava</li>
           <li>bunda, čepice (dle počasí)</li>
           <li>vhodná obuv na běhání (dle počasí)</li>
         </ul>
-      </li>
-      <li>
-        <span>Náhradní oblečení (v pytli v šatně)</span>
+      </div>
+      <div class="clothing__type">
+        <div class="clothing__heading">
+          <h3>Náhradní oblečení (v pytli v šatně)</h3>
+          <img class="clothing__icon" src="/images/locker.svg" alt="">
+        </div>
         <ul>
           <li>spodní prádlo</li>
           <li>tričko</li>
@@ -31,12 +40,11 @@
           <li>ponožky</li>
           <li>pláštěnka</li>
           <li>gumovky (v botárně)</li>
-          <li>2x igelitovou tašku (na mokré věci, na věci na ven)</li>
+          <li>2x igelitovou tašku (na mokré věci / věci na ven)</li>
+          <li>cvičební úbor (pouze pro předškolní a prostřední děti)</li>
         </ul>
-      </li>
-      <li>Cvičební úbor - pouze pro předškolní a prostřední děti</li>
-    </ul>
-
+      </div>
+    </div>
   </section>
 
 </main>
