--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -13,12 +13,12 @@
       <a class="logo-link" href="/index.html">
         <img class="logo" src="/images/logo.png" alt="logo">
       </a>
-      <div class="char-img"> <!-- obrázky povedou na podstránku jednotlivých tříd -->
-        <a href="#"><img src="/images/krtecek.png" alt="krteček"></a>
-        <a href="#"><img src="/images/cvrcek.png" alt="cvrček"></a>
-        <a href="#"><img src="/images/rakosnicek.gif" alt="rákosníček"></a>
-        <a href="#"><img src="/images/makova-panenka.jpg" alt="maková panenka"></a>
-        <a href="#"><img src="/images/broucci.png" alt="brouček"></a>
+      <div class="char-img">
+        <a href="/tridy/krtecek"><img src="/images/krtecek.png" alt="krteček"></a>
+        <a href="/tridy/cvrcek"><img src="/images/cvrcek.png" alt="cvrček"></a>
+        <a href="/tridy/rakosnicek"><img src="/images/rakosnicek.gif" alt="rákosníček"></a>
+        <a href="/tridy/makova-panenka"><img src="/images/makova-panenka.jpg" alt="maková panenka"></a>
+        <a href="/tridy/broucci"><img src="/images/broucci.png" alt="brouček"></a>
       </div>
       <div class="contact-details">
         <div>
