--- a/css/_about-school.scss
+++ b/css/_about-school.scss
@@ -124,9 +124,7 @@
   &__foundation,
   &__gdpr,
   &__info {
-    border-radius: 4px;
-    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
-    padding: 0 1em;
+    @include shadow-box;
   }
 
   &__reports {
