--- a/css/_for-parents.scss
+++ b/css/_for-parents.scss
@@ -2,9 +2,7 @@
   
   &__year,
   &__holidays {
-    border-radius: 4px;
-    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
-    padding: 1em;
+    @include shadow-box;
     margin-bottom: 1em;
     display: flex;
   }
@@ -13,13 +11,13 @@
     flex-basis: 60%;
   }
 
-  &__date {
+  &__calendar {
     display: flex;
     align-items: center;
     text-align: center;
-    border-radius: 4px;
-    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
     width: 320px;
+    @include shadow-box;
+    padding: 0;
     margin: 1em 0;
   }
 
@@ -56,7 +54,7 @@
 }
 
 .date {
-  background-color: #3399FF;
+  background-color: $color-primary;
   color: white;
   font-weight: 600;
   text-align: center;
@@ -78,12 +76,73 @@
   }
 }
 
+.clothing {
+  &-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__type {
+    @include shadow-box;
+    flex-basis: 32%;
+    text-align: left;
+
+    h3 {
+      text-align: center;
+    }
+  }
+
+  &__heading {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__icon {
+    width: 24px;
+    margin: 1em 1em 0 1em;
+  }
+}
+
+.advice {
+  &-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  &__type {
+    @include shadow-box;
+    margin: 1em;
+    flex-basis: 44%;
+    text-align: left;
+
+    h3 {
+      text-align: center;
+    }
+  }
+
+  &__heading {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__icon {
+    width: 24px;
+    margin: 1em 1em 0 1em;
+  }
+}
+
 .payment {
   table,
   th,
   td {
     border: 1px solid $color-dark;
     border-collapse: collapse;
-    padding: 0 0.5em;
+    padding: 0.5em;
+  }
+
+  th:last-child, 
+  td:last-child {
+    background-color: $color-primary-light;
   }
 }
