--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,3 +1,5 @@
+/* ---------- variables ---------- */
+
 $color-primary: hsl(30, 100%, 60%);
 $color-primary-light: hsl(30, 100%, 70%);
 $color-primary-dark: hsl(30, 100%, 50%);
@@ -6,3 +8,11 @@ $color-light: hsl(0, 0%, 90%);
 
 $font-headings: 'Roboto Condensed', sans-serif;
 $font-text: 'Open Sans', sans-serif;
+
+/* ---------- mixins ---------- */
+
+@mixin shadow-box {
+  border-radius: 4px;
+  box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+}
