--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/* ---------- variables ---------- */
+/* ---------- mixins ---------- */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto+Condensed:wght@400;700&display=swap");
 .header {
   display: -ms-grid;
@@ -78,6 +80,7 @@ nav {
   /* Safari */
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .nav {
@@ -347,7 +350,7 @@ nav {
   border-radius: 4px;
   -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
-  padding: 0 1em;
+  padding: 1em;
 }
 
 .documents__reports {
@@ -424,7 +427,7 @@ nav {
       flex-basis: 60%;
 }
 
-.enrolment__date {
+.enrolment__calendar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -432,10 +435,12 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  width: 320px;
   border-radius: 4px;
   -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
-  width: 320px;
+  padding: 1em;
+  padding: 0;
   margin: 1em 0;
 }
 
@@ -469,7 +474,7 @@ nav {
 }
 
 .date {
-  background-color: #3399FF;
+  background-color: #ff9933;
   color: white;
   font-weight: 600;
   text-align: center;
@@ -491,12 +496,94 @@ nav {
   padding: 1em;
 }
 
+.clothing-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.clothing__type {
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+  -ms-flex-preferred-size: 32%;
+      flex-basis: 32%;
+  text-align: left;
+}
+
+.clothing__type h3 {
+  text-align: center;
+}
+
+.clothing__heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.clothing__icon {
+  width: 24px;
+  margin: 1em 1em 0 1em;
+}
+
+.advice-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.advice__type {
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+  margin: 1em;
+  -ms-flex-preferred-size: 44%;
+      flex-basis: 44%;
+  text-align: left;
+}
+
+.advice__type h3 {
+  text-align: center;
+}
+
+.advice__heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.advice__icon {
+  width: 24px;
+  margin: 1em 1em 0 1em;
+}
+
 .payment table,
 .payment th,
 .payment td {
   border: 1px solid #333333;
   border-collapse: collapse;
-  padding: 0 0.5em;
+  padding: 0.5em;
+}
+
+.payment th:last-child,
+.payment td:last-child {
+  background-color: #ffb366;
 }
 
 .contact {
@@ -565,6 +652,7 @@ nav {
   padding: 1em;
 }
 
+/* vyřešit, že footer není při krátkém obsahu na větších obrazovkách úplně dole */
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -581,7 +669,7 @@ body {
   color: #333333;
 }
 
-/* generic styles for headings */
+/* ---------- generic styles for headings ---------- */
 h1 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 1.5em;
@@ -602,7 +690,7 @@ h3 {
   margin-bottom: 0;
 }
 
-/* generic styles for links */
+/* ---------- generic styles for links ---------- */
 a {
   color: #ff9933;
 }
@@ -611,7 +699,7 @@ a:hover {
   color: #ff8000;
 }
 
-/* generic styles for iframes */
+/* ---------- generic styles for iframes ---------- */
 iframe {
   border: none;
 }
