--- a/_includes/layouts/classes.njk
+++ b/_includes/layouts/classes.njk
@@ -5,7 +5,28 @@
 
   <section class="classes">
     <h1>Třídy</h1>
-    
+    <div class="classes__links">
+      <a href="/tridy/broucci">
+        <img class="classes__images" src="/images/broucci.jpg" alt="broučci">
+        <p class="classes__names">Broučci</p>
+      </a>
+      <a href="/tridy/cvrcek">
+        <img class="classes__images" src="/images/cvrcek.jpg" alt="cvrček">
+        <p class="classes__names">Cvrček</p>
+      </a>
+      <a href="/tridy/krtecek">
+        <img class="classes__images" src="/images/krtecek.jpg" alt="krteček">
+        <p class="classes__names">Krteček</p>
+      </a>
+      <a href="/tridy/makova-panenka">
+        <img class="classes__images" src="/images/makova-panenka.jpg" alt="maková panenka">
+        <p class="classes__names">Maková panenka</p>
+      </a>
+      <a href="/tridy/rakosnicek">
+        <img class="classes__images" src="/images/rakosnicek.jpg" alt="rákosníček">
+        <p class="classes__names">Rákosníček</p>
+      </a>
+    </div>
   </section>
 
 </main>
