--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -14,11 +14,11 @@
         <img class="logo" src="/images/logo.png" alt="logo">
       </a>
       <div class="char-img">
-        <a href="/tridy/krtecek"><img src="/images/krtecek.png" alt="krteček"></a>
-        <a href="/tridy/cvrcek"><img src="/images/cvrcek.png" alt="cvrček"></a>
-        <a href="/tridy/rakosnicek"><img src="/images/rakosnicek.gif" alt="rákosníček"></a>
+        <a href="/tridy/broucci"><img src="/images/broucci.jpg" alt="brouček"></a>
+        <a href="/tridy/cvrcek"><img src="/images/cvrcek.jpg" alt="cvrček"></a>
+        <a href="/tridy/krtecek"><img src="/images/krtecek.jpg" alt="krteček"></a>
         <a href="/tridy/makova-panenka"><img src="/images/makova-panenka.jpg" alt="maková panenka"></a>
-        <a href="/tridy/broucci"><img src="/images/broucci.png" alt="brouček"></a>
+        <a href="/tridy/rakosnicek"><img src="/images/rakosnicek.jpg" alt="rákosníček"></a>
       </div>
       <div class="contact-details">
         <div>
