--- a/css/styles.css
+++ b/css/styles.css
@@ -586,6 +586,34 @@ nav {
   background-color: #ffb366;
 }
 
+.classes__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.classes a {
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+}
+
+.classes__images {
+  width: 100%;
+}
+
+.classes__names {
+  color: #333333;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+}
+
 .contact {
   text-align: center;
 }
