--- a/_includes/layouts/contact.njk
+++ b/_includes/layouts/contact.njk
@@ -8,7 +8,7 @@
     
     {{ content | safe }}
 
-    <iframe src="https://frame.mapy.cz/zakladni?x=14.5627875&y=50.0414868&z=16&l=0&source=addr&id=9105816" height="500" width="80%" title="mapa"></iframe>
+    <iframe src="https://frame.mapy.cz/zakladni?x=14.5627875&y=50.0414868&z=16&l=0&source=addr&id=9105816" frameborder="0" height="500" width="80%" title="MS Parmska mapa"></iframe>
     <!-- předělat mapu pomocí JavaScriptu -->
 
   </section>
