--- a/_includes/layouts/interior.njk
+++ b/_includes/layouts/interior.njk
@@ -5,7 +5,7 @@
 
   <section class="interior">
     <h1>Jak to u nás vypadá</h1>
-    <iframe src="https://www.msparmska.cz/wp-content/panorama/index.html" height="550" width="100%" title="panorama"></iframe>
+    <iframe src="https://www.msparmska.cz/wp-content/panorama/index.html" frameborder="0" height="550" width="100%" title="MS Parmska panorama"></iframe>
   </section>
 
 </main>
