classes logo-images, news and meal templates

--- a/_includes/layouts/broucci.njk
+++ b/_includes/layouts/broucci.njk
@@ -4,7 +4,10 @@
 <main class="main main--classes">
 
   <section class="broucci">
-    <h1>Broučci</h1>
+    <div class="class__heading">
+      <img class="class__image" src="/images/broucci.jpg" alt="">
+      <h1>Broučci</h1>
+    </div>
 
     {{ content | safe }}
     
