--- a/_includes/layouts/cvrcek.njk
+++ b/_includes/layouts/cvrcek.njk
@@ -4,7 +4,10 @@
 <main class="main main--classes">
 
   <section class="cvrcek">
-    <h1>Cvrček</h1>
+    <div class="class__heading">
+      <img class="class__image" src="/images/cvrcek.jpg" alt="">
+      <h1>Cvrček</h1>
+    </div>
     
     {{ content | safe }}
     
