--- a/_includes/layouts/krtecek.njk
+++ b/_includes/layouts/krtecek.njk
@@ -4,7 +4,10 @@
 <main class="main main--classes">
 
   <section class="krtecek">
-    <h1>Krteček</h1>
+    <div class="class__heading">
+      <img class="class__image" src="/images/krtecek.jpg" alt="">
+      <h1>Krteček</h1>
+    </div>
 
     {{ content | safe }}
     
