--- a/_includes/layouts/makova-panenka.njk
+++ b/_includes/layouts/makova-panenka.njk
@@ -4,7 +4,10 @@
 <main class="main main--classes">
 
   <section class="makova-panenka">
-    <h1>Maková panenka</h1>
+    <div class="class__heading">
+      <img class="class__image" src="/images/makova-panenka.jpg" alt="">
+      <h1>Maková panenka</h1>
+    </div>
     
     {{ content | safe }}
 
