--- a/_includes/layouts/rakosnicek.njk
+++ b/_includes/layouts/rakosnicek.njk
@@ -4,8 +4,11 @@
 <main class="main main--classes">
 
   <section class="rakosnicek">
-    <h1>Rákosníček</h1>
-    
+    <div class="class__heading">
+      <img class="class__image" src="/images/rakosnicek.jpg" alt="">
+      <h1>Rákosníček</h1>
+    </div>
+
     {{ content | safe }}
 
   </section>
