--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -20,3 +20,16 @@
     text-align: center;
   }
 }
+
+.class {
+  &__heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__image {
+    width: 60px;
+    margin: 0.5em;
+  }
+}
