form for locked class section

--- a/_includes/layouts/broucci.njk
+++ b/_includes/layouts/broucci.njk
@@ -9,7 +9,10 @@
       <h1>Broučci</h1>
     </div>
 
-    {{ content | safe }}
+    <div class="class__content">
+      {{ content | safe }}
+      {% include "partials/locked.njk" %}
+    </div>
     
   </section>
 
