--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -16,7 +16,7 @@
     color: $color-dark;
     font-weight: 600;
     text-transform: uppercase;
-    text-decoration: none; // nefunguje -> proč?
+    text-decoration: none; // nefunguje -> zjistit proč
     text-align: center;
   }
 }
@@ -31,5 +31,51 @@
   &__image {
     width: 60px;
     margin: 0.5em;
+  }
+
+  &__content {
+    display: grid;
+    grid-template-columns: 60% 36%;
+    grid-gap: 2em;
+
+    &--old {
+      grid-column: 1 / 3;
+    }
+
+    &--aside {
+      padding-left: 2em;
+      grid-column: 2;
+      grid-row: 1;
+      border-left: 1px solid grey;
+      text-align: left;
+    }
+  }
+
+  &__iframe-yt {
+    max-width: 750px;
+  }
+}
+
+.password {
+  display: flex;
+  align-items: center;
+
+  &-input {
+    padding: 0.5em;
+  }
+
+  &-visible {
+    width: 16px;
+    margin: 0.5em;
+  }
+
+  &-button {
+    font-family: inherit;
+    padding: 0.5em;
+    margin: 1em 0;
+    background-color: $color-primary-light;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
   }
 }
