--- a/css/styles.css
+++ b/css/styles.css
@@ -216,8 +216,8 @@ nav {
 
 .interests__image {
   border-radius: 4px;
-  -webkit-box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
 .interests__image--left {
@@ -629,6 +629,63 @@ nav {
 .class__image {
   width: 60px;
   margin: 0.5em;
+}
+
+.class__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 60% 36%;
+      grid-template-columns: 60% 36%;
+  grid-gap: 2em;
+}
+
+.class__content--old {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+}
+
+.class__content--aside {
+  padding-left: 2em;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  border-left: 1px solid grey;
+  text-align: left;
+}
+
+.class__iframe-yt {
+  max-width: 750px;
+}
+
+.password {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.password-input {
+  padding: 0.5em;
+}
+
+.password-visible {
+  width: 16px;
+  margin: 0.5em;
+}
+
+.password-button {
+  font-family: inherit;
+  padding: 0.5em;
+  margin: 1em 0;
+  background-color: #ffb366;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
 .contact {
