form - show/hide input value on click

--- a/_includes/partials/locked.njk
+++ b/_includes/partials/locked.njk
@@ -3,8 +3,8 @@
   <p>Obsah je chráněn. Pokud jej chcete zobrazit, zadejte prosím heslo.</p>
   <form>
     <div class="password">
-      <input class="password-input" type="password">
-      <img class="password-visible" src="/images/eye-open.svg" alt="">
+      <input id="password-input" class="password-input" type="password">
+      <img id="password-visible" class="password-visible" src="/images/eye-open.svg" alt="">
     </div>
     <button class="password-button" type="submit">Odemknout</button>
   </form>
