--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -67,6 +67,7 @@
   &-visible {
     width: 16px;
     margin: 0.5em;
+    cursor: pointer;
   }
 
   &-button {
@@ -77,5 +78,6 @@
     border: none;
     border-radius: 4px;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
   }
 }
