--- a/css/styles.css
+++ b/css/styles.css
@@ -675,6 +675,7 @@ nav {
 .password-visible {
   width: 16px;
   margin: 0.5em;
+  cursor: pointer;
 }
 
 .password-button {
@@ -686,6 +687,7 @@ nav {
   border-radius: 4px;
   -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .contact {
