end template, access to locked photogallery

--- a/_includes/layouts/photogallery.njk
+++ b/_includes/layouts/photogallery.njk
@@ -1,13 +1,12 @@
 {% include "partials/header.njk" %}
 {% include "partials/nav.njk" %}
 
-<main class="main main--meal">
+<main class="main main--photogallery">
 
-  <section class="meal">
-    <h1>Jídelníček</h1>
+  <section class="photogallery">
 
-    {{ content | safe }}
-    
+  {{ content | safe }}
+
   </section>
 
 </main>
