--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <div id="app" class="container">
+  <div id="app">
     <header class="header">
       <a class="logo-link" href="/index.html">
         <img class="logo" src="/images/logo.png" alt="logo">
