--- a/_includes/partials/locked.njk
+++ b/_includes/partials/locked.njk
@@ -1,11 +1,11 @@
 <aside class="class__content--aside">
   <h2>Fotogalerie</h2>
   <p>Obsah je chráněn. Pokud jej chcete zobrazit, zadejte prosím heslo.</p>
-  <form>
+  <form id="password-form">
     <div class="password">
       <input id="password-input" class="password-input" type="password">
       <img id="password-visible" class="password-visible" src="/images/eye-open.svg" alt="">
     </div>
-    <button class="password-button" type="submit">Odemknout</button>
+    <button id= "password-button" class="password-button" type="submit">Odemknout</button>
   </form>
 </aside>
