--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -79,5 +79,18 @@
     border-radius: 4px;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+
+    &:hover {
+      background-color: $color-primary;
+    }
+
+    &-link {
+      color: $color-dark;
+      text-decoration: none;
+
+      &:hover {
+        color: $color-dark;
+      }
+    }
   }
 }
